--- a/preseed.cfg
+++ b/preseed.cfg
@@ -303,7 +303,6 @@ d-i partman/confirm_nooverwrite boolean true
 d-i apt-setup/cdrom/set-first boolean false
 d-i apt-setup/cdrom/set-next boolean false   
 d-i apt-setup/cdrom/set-failed boolean false
-
 # You can choose to install non-free and contrib software.
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
@@ -442,4 +441,4 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install zsh; in-target chsh -s /bin/zsh
-d-i preseed/late_command string mkdir /target/install/; cp -R /cdrom/_SCRIPTS/* /target/install/; chroot /target chmod +x /install/postinstall.sh; chroot /target bash /install/postinstall.sh
+d-i preseed/late_command string cp -R /cdrom/_SCRIPTS/* /target/root/; cd /target/root/; chmod +x /target/root/postinstall.sh; in-target /bin/bash /root/postinstall.sh;
