Latest work variant

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -155,8 +155,12 @@ d-i clock-setup/ntp boolean true
 # If the system has free space you can choose to only partition that space.
 # This is only honoured if partman-auto/method (below) is not set.
 #d-i partman-auto/init_automatically_partition select biggest_free
-d-i partman-auto/disk /dev/sda
+# If one of the disks that are going to be automatically partitioned
+# contains an old LVM configuration, the user will normally receive a
+# warning. This can be preseeded away...
 
+
+d-i partman-auto/disk string /dev/sda
 # Alternatively, you may specify a disk to partition. If the system has only
 # one disk the installer will default to using that, but otherwise the device
 # name must be given in traditional, non-devfs format (so e.g. /dev/sda
@@ -175,15 +179,17 @@ d-i partman-auto-lvm/guided_size string max
 # free space or the 'max' keyword.
 # d-i partman-auto-lvm/guided_size string max
 
-# If one of the disks that are going to be automatically partitioned
-# contains an old LVM configuration, the user will normally receive a
-# warning. This can be preseeded away...
 d-i partman-lvm/device_remove_lvm boolean true
 # The same applies to pre-existing software RAID array:
 # d-i partman-md/device_remove_md boolean true
 # And the same goes for the confirmation to write the lvm partitions.
 d-i partman-lvm/confirm boolean true
 d-i partman-lvm/confirm_nooverwrite boolean true
+
+
+
+
+
 
 # You can choose one of the three predefined partitioning recipes:
 # - atomic: all files in one partition
@@ -441,4 +447,4 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install zsh; in-target chsh -s /bin/zsh
-d-i preseed/late_command string cp -R /cdrom/_SCRIPTS/* /target/root/; cd /target/root/; chmod +x /target/root/postinstall.sh; in-target /bin/bash /root/postinstall.sh;
+d-i preseed/late_command string cp -R /cdrom/_SCRIPTS/* /target/root/; chmod +x /target/root/postinstall.sh; in-target /bin/bash /root/postinstall.sh;
