--- a/settings.conf
+++ b/settings.conf
@@ -12,8 +12,8 @@ INSTALLNAME=>>> CUSTOM INSTALLATION
 MBR_TEMPLATE=isohdpfx.bin
 EFI_IMG=efi.img
 # Specify account which you want to add during installation
-USERNAME=user
+USERNAME=mpeiadmin
 # Specify password of new account which you want to add during installation
-USERPASS=very-strong-pass
+USERPASS=$gdp@Jok;
 # Specify root password which you want to add during installation
-ROOTPASS=very-very-strong-pass
+ROOTPASS=@CoSSdol()589
