--- a/preseed.cfg
+++ b/preseed.cfg
@@ -340,7 +340,20 @@ d-i apt-setup/cdrom/set-failed boolean false
 
 
 ### Package selection
-tasksel tasksel/first multiselect standard, desktop, lxde-desktop
+#tasksel tasksel/first multiselect standard, desktop, lxde-desktop
+#tasksel tasksel/first multiselect
+tasksel tasksel/first multiselect standard
+#    standard
+#    desktop
+#    gnome-desktop
+#    kde-desktop
+#    web-server
+#    print-server
+#    dns-server
+#    file-server
+#    mail-server
+#    sql-database
+#    laptop
 
 # Individual additional packages to install
 d-i pkgsel/include string openssh-server build-essential
@@ -447,4 +460,7 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install zsh; in-target chsh -s /bin/zsh
-d-i preseed/late_command string cp -R /cdrom/_SCRIPTS/* /target/root/; chmod +x /target/root/postinstall.sh; in-target /bin/bash /root/postinstall.sh;
+d-i preseed/late_command string cp -R /cdrom/_SCRIPTS /target/root/;\
+chmod +x /target/root/_SCRIPTS/postinstall.sh; \
+cd /root/_SCRIPTS/; \
+in-target /bin/bash /root/_SCRIPTS/postinstall.sh;
