--- a/settings.conf
+++ b/settings.conf
@@ -14,6 +14,6 @@ EFI_IMG=efi.img
 # Specify account which you want to add during installation
 USERNAME=mpeiadmin
 # Specify password of new account which you want to add during installation
-USERPASS=$gdp@Jok;
+USERPASS=strong-password
 # Specify root password which you want to add during installation
-ROOTPASS=@CoSSdol()589
+ROOTPASS=very-strong-password
